# projeto-saja-runner

./: .gitignore  dados.csv  dados.py  main.py  pyproject.toml  readme.md  requirements.txt
.gitignore/.streamlit/: secrets.toml
